--- a/screen/C03.glade
+++ b/screen/C03.glade
@@ -616,7 +616,7 @@
       <class>GtkPandaEntry</class>
       <name>BYOMEIHENFLG</name>
       <x>904</x>
-      <y>504</y>
+      <y>432</y>
       <width>72</width>
       <height>24</height>
       <editable>False</editable>
@@ -960,13 +960,63 @@
       <input_mode>XIM</input_mode>
       <xim_enabled>False</xim_enabled>
     </widget>
+      <widget>
+        <class>GtkPandaEntry</class>
+        <name>BYOMEIINPUTCD_1</name>
+        <x>520</x>
+        <y>464</y>
+        <width>158</width>
+        <height>22</height>
+        <sensitive>True</sensitive>
+        <can_focus>True</can_focus>
+        <has_focus>False</has_focus>
+        <editable>True</editable>
+        <text></text>
+        <input_mode>XIM</input_mode>
+        <xim_enabled>False</xim_enabled>
+        <signal>
+          <name>changed</name>
+          <handler>entry_changed</handler>
+          <data>CHANGED</data>
+        </signal>
+        <signal>
+          <name>activate</name>
+          <handler>send_event</handler>
+          <data>ACTIVATE</data>
+        </signal>
+      </widget>
+      <widget>
+        <class>GtkPandaEntry</class>
+        <name>BYOMEIINPUTCD_2</name>
+        <x>680</x>
+        <y>464</y>
+        <width>158</width>
+        <height>22</height>
+        <sensitive>True</sensitive>
+        <can_focus>True</can_focus>
+        <has_focus>False</has_focus>
+        <editable>True</editable>
+        <text></text>
+        <input_mode>XIM</input_mode>
+        <xim_enabled>False</xim_enabled>
+        <signal>
+          <name>changed</name>
+          <handler>entry_changed</handler>
+          <data>CHANGED</data>
+        </signal>
+        <signal>
+          <name>activate</name>
+          <handler>send_event</handler>
+          <data>ACTIVATE</data>
+        </signal>
+      </widget>
 
     <widget>
       <class>GtkPandaCombo</class>
       <name>BYOMEISBTCOMBO</name>
-      <x>650</x>
-      <y>464</y>
-      <width>112</width>
+      <x>882</x>
+      <y>500</y>
+      <width>94</width>
       <height>24</height>
       <value_in_list>False</value_in_list>
       <ok_if_empty>True</ok_if_empty>
