--- a/screen/I03.glade
+++ b/screen/I03.glade
@@ -16,26 +16,23 @@
   <width>710</width>
   <height>410</height>
   <signal>
-    <name>map_event</name>
-    <handler>map_event</handler>
-    <last_modification_time>Thu, 21 Dec 2000 08:09:57 GMT</last_modification_time>
-  </signal>
-  <signal>
     <name>set_focus</name>
     <handler>set_focus</handler>
-    <last_modification_time>Thu, 21 Dec 2000 08:10:05 GMT</last_modification_time>
+  </signal>
+  <signal>
+    <name>map_event</name>
+    <handler>map_event</handler>
   </signal>
   <signal>
     <name>delete_event</name>
     <handler>gtk_true</handler>
-    <last_modification_time>Mon, 25 Nov 2002 06:01:39 GMT</last_modification_time>
   </signal>
   <title>(I03)入院歴作成</title>
   <type>GTK_WINDOW_DIALOG</type>
   <position>GTK_WIN_POS_CENTER</position>
   <modal>True</modal>
   <allow_shrink>False</allow_shrink>
-  <allow_grow>False</allow_grow>
+  <allow_grow>True</allow_grow>
   <auto_shrink>False</auto_shrink>
   <wmclass_class>jma-receipt.dialog</wmclass_class>
 
@@ -60,7 +57,6 @@
 	<name>clicked</name>
 	<handler>send_event</handler>
 	<data>CLICKED</data>
-	<last_modification_time>Thu, 21 Dec 2000 06:13:54 GMT</last_modification_time>
       </signal>
       <label>戻る</label>
       <relief>GTK_RELIEF_NORMAL</relief>
@@ -83,7 +79,6 @@
 	<name>clicked</name>
 	<handler>send_event</handler>
 	<data>CLICKED</data>
-	<last_modification_time>Thu, 21 Dec 2000 06:13:54 GMT</last_modification_time>
       </signal>
       <label>クリア</label>
       <relief>GTK_RELIEF_NORMAL</relief>
@@ -106,7 +101,6 @@
 	<name>clicked</name>
 	<handler>send_event</handler>
 	<data>CLICKED</data>
-	<last_modification_time>Thu, 21 Dec 2000 06:13:54 GMT</last_modification_time>
       </signal>
       <label>自院／他院</label>
       <relief>GTK_RELIEF_NORMAL</relief>
@@ -129,7 +123,6 @@
 	<name>clicked</name>
 	<handler>send_event</handler>
 	<data>CLICKED</data>
-	<last_modification_time>Thu, 21 Dec 2000 06:13:54 GMT</last_modification_time>
       </signal>
       <label>削除</label>
       <relief>GTK_RELIEF_NORMAL</relief>
@@ -188,7 +181,6 @@
 	<name>clicked</name>
 	<handler>send_event</handler>
 	<data>CLICKED</data>
-	<last_modification_time>Fri, 30 Aug 2002 07:39:58 GMT</last_modification_time>
       </signal>
       <label>登録</label>
       <relief>GTK_RELIEF_NORMAL</relief>
@@ -214,16 +206,14 @@
       <height>24</height>
       <can_focus>True</can_focus>
       <signal>
-	<name>activate</name>
-	<handler>send_event</handler>
-	<data>ACTIVATE</data>
-	<last_modification_time>Fri, 30 Aug 2002 08:07:38 GMT</last_modification_time>
-      </signal>
-      <signal>
 	<name>changed</name>
 	<handler>entry_changed</handler>
 	<data>CHANGED</data>
-	<last_modification_time>Fri, 30 Aug 2002 08:08:04 GMT</last_modification_time>
+      </signal>
+      <signal>
+	<name>activate</name>
+	<handler>send_event</handler>
+	<data>ACTIVATE</data>
       </signal>
       <editable>True</editable>
       <text_visible>True</text_visible>
@@ -242,16 +232,14 @@
       <height>24</height>
       <can_focus>True</can_focus>
       <signal>
-	<name>activate</name>
-	<handler>send_event</handler>
-	<data>ACTIVATE</data>
-	<last_modification_time>Fri, 30 Aug 2002 08:11:40 GMT</last_modification_time>
-      </signal>
-      <signal>
 	<name>changed</name>
 	<handler>entry_changed</handler>
 	<data>CHANGED</data>
-	<last_modification_time>Fri, 30 Aug 2002 08:12:11 GMT</last_modification_time>
+      </signal>
+      <signal>
+	<name>activate</name>
+	<handler>send_event</handler>
+	<data>ACTIVATE</data>
       </signal>
       <editable>True</editable>
       <text_visible>True</text_visible>
@@ -264,22 +252,20 @@
     <widget>
       <class>GtkPandaEntry</class>
       <name>TAIINYMD</name>
-      <x>100</x>
-      <y>108</y>
+      <x>245</x>
+      <y>76</y>
       <width>75</width>
       <height>24</height>
       <can_focus>True</can_focus>
       <signal>
-	<name>activate</name>
-	<handler>send_event</handler>
-	<data>ACTIVATE</data>
-	<last_modification_time>Fri, 30 Aug 2002 08:15:29 GMT</last_modification_time>
-      </signal>
-      <signal>
 	<name>changed</name>
 	<handler>entry_changed</handler>
 	<data>CHANGED</data>
-	<last_modification_time>Fri, 30 Aug 2002 08:15:56 GMT</last_modification_time>
+      </signal>
+      <signal>
+	<name>activate</name>
+	<handler>send_event</handler>
+	<data>ACTIVATE</data>
       </signal>
       <editable>True</editable>
       <text_visible>True</text_visible>
@@ -292,22 +278,20 @@
     <widget>
       <class>GtkNumberEntry</class>
       <name>TAISYONISSU</name>
-      <x>280</x>
+      <x>100</x>
       <y>108</y>
       <width>55</width>
       <height>24</height>
       <can_focus>True</can_focus>
       <signal>
-	<name>activate</name>
-	<handler>send_event</handler>
-	<data>ACTIVATE</data>
-	<last_modification_time>Fri, 30 Aug 2002 09:13:08 GMT</last_modification_time>
-      </signal>
-      <signal>
 	<name>changed</name>
 	<handler>entry_changed</handler>
 	<data>CHANGED</data>
-	<last_modification_time>Mon, 02 Sep 2002 03:05:11 GMT</last_modification_time>
+      </signal>
+      <signal>
+	<name>activate</name>
+	<handler>send_event</handler>
+	<data>ACTIVATE</data>
       </signal>
       <editable>True</editable>
       <format>ZZZZ9</format>
@@ -322,16 +306,14 @@
       <height>24</height>
       <can_focus>True</can_focus>
       <signal>
-	<name>activate</name>
-	<handler>send_event</handler>
-	<data>ACTIVATE</data>
-	<last_modification_time>Fri, 30 Aug 2002 09:13:08 GMT</last_modification_time>
-      </signal>
-      <signal>
 	<name>changed</name>
 	<handler>entry_changed</handler>
 	<data>CHANGED</data>
-	<last_modification_time>Mon, 02 Sep 2002 03:05:11 GMT</last_modification_time>
+      </signal>
+      <signal>
+	<name>activate</name>
+	<handler>send_event</handler>
+	<data>ACTIVATE</data>
       </signal>
       <editable>True</editable>
       <text_visible>True</text_visible>
@@ -350,16 +332,14 @@
       <height>24</height>
       <can_focus>True</can_focus>
       <signal>
-	<name>activate</name>
-	<handler>send_event</handler>
-	<data>ACTIVATE</data>
-	<last_modification_time>Fri, 30 Aug 2002 09:16:42 GMT</last_modification_time>
-      </signal>
-      <signal>
 	<name>changed</name>
 	<handler>entry_changed</handler>
 	<data>CHANGED</data>
-	<last_modification_time>Fri, 30 Aug 2002 09:17:02 GMT</last_modification_time>
+      </signal>
+      <signal>
+	<name>activate</name>
+	<handler>send_event</handler>
+	<data>ACTIVATE</data>
       </signal>
       <editable>True</editable>
       <text_visible>True</text_visible>
@@ -378,16 +358,14 @@
       <height>24</height>
       <can_focus>True</can_focus>
       <signal>
-	<name>activate</name>
-	<handler>send_event</handler>
-	<data>ACTIVATE</data>
-	<last_modification_time>Fri, 30 Aug 2002 09:17:34 GMT</last_modification_time>
-      </signal>
-      <signal>
 	<name>changed</name>
 	<handler>entry_changed</handler>
 	<data>CHANGED</data>
-	<last_modification_time>Fri, 30 Aug 2002 09:18:01 GMT</last_modification_time>
+      </signal>
+      <signal>
+	<name>activate</name>
+	<handler>send_event</handler>
+	<data>ACTIVATE</data>
       </signal>
       <editable>True</editable>
       <text_visible>True</text_visible>
@@ -406,20 +384,18 @@
       <height>24</height>
       <can_focus>True</can_focus>
       <signal>
-	<name>activate</name>
-	<handler>send_event</handler>
-	<data>ACTIVATE</data>
-	<last_modification_time>Fri, 30 Aug 2002 09:18:33 GMT</last_modification_time>
-      </signal>
-      <signal>
 	<name>changed</name>
 	<handler>entry_changed</handler>
 	<data>CANGED</data>
-	<last_modification_time>Fri, 30 Aug 2002 09:18:59 GMT</last_modification_time>
+      </signal>
+      <signal>
+	<name>activate</name>
+	<handler>send_event</handler>
+	<data>ACTIVATE</data>
       </signal>
       <editable>True</editable>
       <text_visible>True</text_visible>
-      <text_max_length>50</text_max_length>
+      <text_max_length>0</text_max_length>
       <text></text>
       <input_mode>XIM</input_mode>
       <xim_enabled>True</xim_enabled>
@@ -434,16 +410,14 @@
       <height>24</height>
       <can_focus>True</can_focus>
       <signal>
-	<name>activate</name>
-	<handler>send_event</handler>
-	<data>ACTIVATE</data>
-	<last_modification_time>Fri, 30 Aug 2002 09:19:27 GMT</last_modification_time>
-      </signal>
-      <signal>
 	<name>changed</name>
 	<handler>entry_changed</handler>
 	<data>CHANGED</data>
-	<last_modification_time>Fri, 30 Aug 2002 09:20:00 GMT</last_modification_time>
+      </signal>
+      <signal>
+	<name>activate</name>
+	<handler>send_event</handler>
+	<data>ACTIVATE</data>
       </signal>
       <editable>True</editable>
       <text_visible>True</text_visible>
@@ -462,16 +436,14 @@
       <height>24</height>
       <can_focus>True</can_focus>
       <signal>
-	<name>activate</name>
-	<handler>send_event</handler>
-	<data>ACTIVATE</data>
-	<last_modification_time>Fri, 30 Aug 2002 09:19:27 GMT</last_modification_time>
-      </signal>
-      <signal>
 	<name>changed</name>
 	<handler>entry_changed</handler>
 	<data>CHANGED</data>
-	<last_modification_time>Fri, 30 Aug 2002 09:20:00 GMT</last_modification_time>
+      </signal>
+      <signal>
+	<name>activate</name>
+	<handler>send_event</handler>
+	<data>ACTIVATE</data>
       </signal>
       <editable>True</editable>
       <text_visible>True</text_visible>
@@ -558,16 +530,14 @@
 	<name>SHOKAI</name>
 	<can_focus>True</can_focus>
 	<signal>
-	  <name>activate</name>
-	  <handler>send_event</handler>
-	  <data>ACTIVATE</data>
-	  <last_modification_time>Fri, 30 Aug 2002 08:00:31 GMT</last_modification_time>
-	</signal>
-	<signal>
 	  <name>changed</name>
 	  <handler>entry_changed</handler>
 	  <data>CHANGED</data>
-	  <last_modification_time>Fri, 30 Aug 2002 08:01:05 GMT</last_modification_time>
+	</signal>
+	<signal>
+	  <name>activate</name>
+	  <handler>send_event</handler>
+	  <data>ACTIVATE</data>
 	</signal>
 	<editable>True</editable>
 	<text_visible>True</text_visible>
@@ -709,7 +679,7 @@
     <widget>
       <class>GtkLabel</class>
       <name>label117</name>
-      <x>188</x>
+      <x>10</x>
       <y>108</y>
       <width>84</width>
       <height>24</height>
@@ -742,16 +712,14 @@
 	<name>RRKKBN</name>
 	<can_focus>True</can_focus>
 	<signal>
-	  <name>activate</name>
-	  <handler>send_event</handler>
-	  <data>ACTIVATE</data>
-	  <last_modification_time>Fri, 30 Aug 2002 08:00:31 GMT</last_modification_time>
-	</signal>
-	<signal>
 	  <name>changed</name>
 	  <handler>entry_changed</handler>
 	  <data>CHANGED</data>
-	  <last_modification_time>Fri, 30 Aug 2002 08:01:05 GMT</last_modification_time>
+	</signal>
+	<signal>
+	  <name>activate</name>
+	  <handler>send_event</handler>
+	  <data>ACTIVATE</data>
 	</signal>
 	<editable>True</editable>
 	<text_visible>True</text_visible>
@@ -763,26 +731,10 @@
     </widget>
 
     <widget>
-      <class>GtkLabel</class>
-      <name>label120</name>
-      <x>40</x>
-      <y>108</y>
-      <width>60</width>
-      <height>24</height>
-      <label>退院日</label>
-      <justify>GTK_JUSTIFY_CENTER</justify>
-      <wrap>False</wrap>
-      <xalign>0</xalign>
-      <yalign>0.5</yalign>
-      <xpad>0</xpad>
-      <ypad>0</ypad>
-    </widget>
-
-    <widget>
       <class>GtkPandaCombo</class>
       <name>CMB_NYUINCHUKBN</name>
       <x>348</x>
-      <y>108</y>
+      <y>76</y>
       <width>120</width>
       <height>24</height>
       <value_in_list>False</value_in_list>
@@ -798,16 +750,14 @@
 	<name>NYUINCHUKBN</name>
 	<can_focus>True</can_focus>
 	<signal>
-	  <name>activate</name>
-	  <handler>send_event</handler>
-	  <data>ACTIVATE</data>
-	  <last_modification_time>Fri, 30 Aug 2002 08:00:31 GMT</last_modification_time>
-	</signal>
-	<signal>
 	  <name>changed</name>
 	  <handler>entry_changed</handler>
 	  <data>CHANGED</data>
-	  <last_modification_time>Fri, 30 Aug 2002 08:01:05 GMT</last_modification_time>
+	</signal>
+	<signal>
+	  <name>activate</name>
+	  <handler>send_event</handler>
+	  <data>ACTIVATE</data>
 	</signal>
 	<editable>True</editable>
 	<text_visible>True</text_visible>
@@ -816,6 +766,74 @@
 	<input_mode>XIM</input_mode>
 	<xim_enabled>False</xim_enabled>
       </widget>
+    </widget>
+
+    <widget>
+      <class>GtkNumberEntry</class>
+      <name>TOKUTAISYONISSU</name>
+      <x>348</x>
+      <y>108</y>
+      <width>55</width>
+      <height>24</height>
+      <can_focus>True</can_focus>
+      <signal>
+	<name>changed</name>
+	<handler>entry_changed</handler>
+      </signal>
+      <signal>
+	<name>activate</name>
+	<handler>send_event</handler>
+      </signal>
+      <editable>True</editable>
+      <format>ZZZZ9</format>
+    </widget>
+
+    <widget>
+      <class>GtkLabel</class>
+      <name>label2</name>
+      <x>408</x>
+      <y>108</y>
+      <width>20</width>
+      <height>24</height>
+      <label>）</label>
+      <justify>GTK_JUSTIFY_CENTER</justify>
+      <wrap>False</wrap>
+      <xalign>0</xalign>
+      <yalign>0.5</yalign>
+      <xpad>0</xpad>
+      <ypad>0</ypad>
+    </widget>
+
+    <widget>
+      <class>GtkLabel</class>
+      <name>label120</name>
+      <x>189</x>
+      <y>76</y>
+      <width>60</width>
+      <height>24</height>
+      <label>退院日</label>
+      <justify>GTK_JUSTIFY_CENTER</justify>
+      <wrap>False</wrap>
+      <xalign>0</xalign>
+      <yalign>0.5</yalign>
+      <xpad>0</xpad>
+      <ypad>0</ypad>
+    </widget>
+
+    <widget>
+      <class>GtkLabel</class>
+      <name>label1</name>
+      <x>176</x>
+      <y>108</y>
+      <width>172</width>
+      <height>24</height>
+      <label>（うち特定入院料対象日数</label>
+      <justify>GTK_JUSTIFY_CENTER</justify>
+      <wrap>False</wrap>
+      <xalign>0</xalign>
+      <yalign>0.5</yalign>
+      <xpad>0</xpad>
+      <ypad>0</ypad>
     </widget>
   </widget>
 </widget>
