--- a/screen/W12.glade
+++ b/screen/W12.glade
@@ -4961,6 +4961,43 @@
           </widget>
           <widget>
             <class>GtkPandaCombo</class>
+            <name>RECEDEN_LST2KBN_MEDIA_COMBO</name>
+            <x>204</x>
+            <y>616</y>
+            <width>208</width>
+            <height>24</height>
+            <sensitive>True</sensitive>
+            <can_focus>False</can_focus>
+            <has_focus>False</has_focus>
+            <border_width>0</border_width>
+            <items></items>
+            <case_sensitive>False</case_sensitive>
+            <use_arrows>True</use_arrows>
+            <widget>
+              <class>GtkPandaEntry</class>
+              <child_name>GtkPandaCombo:entry</child_name>
+              <name>RECEDEN_LST2KBN_MEDIA</name>
+              <sensitive>True</sensitive>
+              <can_focus>True</can_focus>
+              <has_focus>False</has_focus>
+              <editable>True</editable>
+              <text>0 設定なし</text>
+              <input_mode>XIM</input_mode>
+              <xim_enabled>False</xim_enabled>
+              <signal>
+                <name>changed</name>
+                <handler>entry_changed</handler>
+                <data>CHANGED</data>
+              </signal>
+              <signal>
+                <name>activate</name>
+                <handler>send_event</handler>
+                <data>ACTIVATE</data>
+              </signal>
+            </widget>
+          </widget>
+          <widget>
+            <class>GtkPandaCombo</class>
             <name>RECEDEN_RIREKI_COMBO</name>
             <x>700</x>
             <y>16</y>
@@ -5529,6 +5566,26 @@
             <xpad>0</xpad>
             <ypad>0</ypad>
             <label>レセ電出力区分</label>
+            <justify>GTK_JUSTIFY_LEFT</justify>
+            <wrap>False</wrap>
+          </widget>
+          <widget>
+            <class>GtkLabel</class>
+            <name>label28</name>
+            <x>48</x>
+            <y>606</y>
+            <width>152</width>
+            <height>34</height>
+            <visible>True</visible>
+            <sensitive>True</sensitive>
+            <can_focus>False</can_focus>
+            <has_focus>False</has_focus>
+            <xalign>0</xalign>
+            <yalign>0.5</yalign>
+            <xpad>0</xpad>
+            <ypad>0</ypad>
+            <label>光ディスク等送付書
+　　　　　　　媒体設定</label>
             <justify>GTK_JUSTIFY_LEFT</justify>
             <wrap>False</wrap>
           </widget>
