--- a/screen/H01.glade
+++ b/screen/H01.glade
@@ -106,7 +106,7 @@
         <can_focus>True</can_focus>
         <has_focus>False</has_focus>
         <border_width>0</border_width>
-        <label></label>
+        <label>返戻一覧</label>
         <relief>GTK_RELIEF_NORMAL</relief>
         <xalign>0.5</xalign>
         <yalign>0.5</yalign>
