--- a/screen/W65.glade
+++ b/screen/W65.glade
@@ -6194,6 +6194,102 @@
               </signal>
             </widget>
           </widget>
+          <widget>
+            <class>GtkLabel</class>
+            <name>label3</name>
+            <x>4</x>
+            <y>244</y>
+            <width>244</width>
+            <height>24</height>
+            <sensitive>True</sensitive>
+            <can_focus>False</can_focus>
+            <has_focus>False</has_focus>
+            <xalign>0</xalign>
+            <yalign>0.5</yalign>
+            <xpad>0</xpad>
+            <ypad>0</ypad>
+            <label>自立支援医療の特別計算</label>
+            <justify>GTK_JUSTIFY_CENTER</justify>
+            <wrap>False</wrap>
+          </widget>
+          <widget>
+            <class>GtkPandaCombo</class>
+            <name>CMB_JIRITUTAIKBN</name>
+            <x>732</x>
+            <y>244</y>
+            <width>276</width>
+            <height>24</height>
+            <sensitive>True</sensitive>
+            <can_focus>False</can_focus>
+            <has_focus>False</has_focus>
+            <border_width>0</border_width>
+            <items></items>
+            <case_sensitive>False</case_sensitive>
+            <use_arrows>True</use_arrows>
+            <widget>
+              <class>GtkPandaEntry</class>
+              <child_name>GtkPandaCombo:entry</child_name>
+              <name>JIRITUTAIKBN</name>
+              <width>163</width>
+              <sensitive>True</sensitive>
+              <can_focus>True</can_focus>
+              <has_focus>False</has_focus>
+              <editable>True</editable>
+              <text_max_length>40</text_max_length>
+              <text>0 対象区分６７８９０１２３４５</text>
+              <input_mode>XIM</input_mode>
+              <xim_enabled>False</xim_enabled>
+          <signal>
+            <name>changed</name>
+            <handler>entry_changed</handler>
+            <data>CHANGED</data>
+          </signal>
+          <signal>
+            <name>activate</name>
+            <handler>send_event</handler>
+            <data>ACTIVATE</data>
+          </signal>
+            </widget>
+          </widget>
+          <widget>
+            <class>GtkPandaCombo</class>
+            <name>CMB_JIRITUKBN</name>
+            <x>256</x>
+            <y>244</y>
+            <width>476</width>
+            <height>24</height>
+            <sensitive>True</sensitive>
+            <can_focus>False</can_focus>
+            <has_focus>False</has_focus>
+            <border_width>0</border_width>
+            <items></items>
+            <case_sensitive>False</case_sensitive>
+            <use_arrows>True</use_arrows>
+            <widget>
+              <class>GtkPandaEntry</class>
+              <child_name>GtkPandaCombo:entry</child_name>
+              <name>JIRITUKBN</name>
+              <width>163</width>
+              <sensitive>True</sensitive>
+              <can_focus>True</can_focus>
+              <has_focus>False</has_focus>
+              <editable>True</editable>
+              <text_max_length>80</text_max_length>
+              <text>0 入外それぞれで上限額までの計算をする</text>
+              <input_mode>XIM</input_mode>
+              <xim_enabled>False</xim_enabled>
+          <signal>
+            <name>changed</name>
+            <handler>entry_changed</handler>
+            <data>CHANGED</data>
+          </signal>
+          <signal>
+            <name>activate</name>
+            <handler>send_event</handler>
+            <data>ACTIVATE</data>
+          </signal>
+            </widget>
+          </widget>
         </widget>
         <widget>
           <class>GtkLabel</class>
